fix: body overflow hidden

--- a/src/globals.css
+++ b/src/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  @apply bg-slate-100 h-screen w-screen;
+  @apply bg-slate-100 h-screen w-screen overflow-hidden;
   font-family: 'Work Sans', sans-serif;
 }
 
